// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> Snapshots should match snapshot 1`] = `
.c2 {
  border-radius: 4px;
}

.c8 {
  padding: 8px 16px 8px 16px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 8px 16px 16px 16px;
}

.c5 {
  font-size: 1rem;
  margin: 0;
}

.c4 {
  font-size: 1.5rem;
  margin: 0;
}

.c6 {
  position: relative;
  overflow: hidden;
  margin-top: 8px;
  margin-bottom: 8px;
  padding-bottom: 56.25%;
}

.c7 {
  position: absolute;
  top: 50%;
  width: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px 16px 8px 16px;
}

.c3 {
  margin-left: 12px;
}

.c0 {
  display: inline-block;
  max-width: 400px;
  width: 100%;
  border-radius: 4px;
  background-color: #fff;
  box-shadow: 0px 2px 5px 0px #ccc;
}

.c10 {
  font-size: 0.875rem;
  font-size: 0.875rem;
  padding: 4px 12px 4px 12px;
  cursor: pointer;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fdfdfd;
  border: 2px solid transparent;
  border-radius: 4px;
  background-color: #007079;
}

.c10:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <img
        class="c2"
        height="72"
        src="https://dummyimage.com/72x72"
        width="72"
      />
      <div
        class="c3"
      >
        <h2
          class="c4"
        >
          Title
        </h2>
        <h3
          class="c5"
        >
          Subtitle
        </h3>
      </div>
    </header>
    <div
      class="c6"
    >
      <img
        class="c7"
        src="https://dummyimage.com/600x600"
      />
    </div>
    <div
      class="c8"
    >
      Lorem
    </div>
    <footer
      class="c9"
    >
      <button
        class="c10"
        style="margin-right: 10px;"
      >
        Button
      </button>
      <button
        class="c10"
      >
        Cancel
      </button>
    </footer>
  </section>
</div>
`;

exports[`<Card /> Snapshots should match snapshot with rounded avatar 1`] = `
.c2 {
  border-radius: 9999px;
}

.c8 {
  padding: 8px 16px 8px 16px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 8px 16px 16px 16px;
}

.c5 {
  font-size: 1rem;
  margin: 0;
}

.c4 {
  font-size: 1.5rem;
  margin: 0;
}

.c6 {
  position: relative;
  overflow: hidden;
  margin-top: 8px;
  margin-bottom: 8px;
  padding-bottom: 56.25%;
}

.c7 {
  position: absolute;
  top: 50%;
  width: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px 16px 8px 16px;
}

.c3 {
  margin-left: 12px;
}

.c0 {
  display: inline-block;
  max-width: 400px;
  width: 100%;
  border-radius: 4px;
  background-color: #fff;
  box-shadow: 0px 2px 5px 0px #ccc;
}

.c10 {
  font-size: 0.875rem;
  font-size: 0.875rem;
  padding: 4px 12px 4px 12px;
  cursor: pointer;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fdfdfd;
  border: 2px solid transparent;
  border-radius: 4px;
  background-color: #007079;
}

.c10:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <img
        class="c2"
        height="72"
        src="https://dummyimage.com/72x72"
        width="72"
      />
      <div
        class="c3"
      >
        <h2
          class="c4"
        >
          Title
        </h2>
        <h3
          class="c5"
        >
          Subtitle
        </h3>
      </div>
    </header>
    <div
      class="c6"
    >
      <img
        class="c7"
        src="https://dummyimage.com/600x600"
      />
    </div>
    <div
      class="c8"
    >
      Lorem
    </div>
    <footer
      class="c9"
    >
      <button
        class="c10"
        style="margin-right: 10px;"
      >
        Button
      </button>
      <button
        class="c10"
      >
        Cancel
      </button>
    </footer>
  </section>
</div>
`;
